# GradeSystem_vs

./: README.md  project.config.json  project.private.config.json  上线说明.md
GradeSystem/: CMakeLists.txt
GradeSystem/data/: data.txt
GradeSystem/include/: app_logic.h  student.h
GradeSystem/src/: analysis.c  app_logic.c  file.c  main.cpp  student.c
codex/GradeSystem/: .gitignore  README.md
codex/GradeSystem/GradeSystem/: CLion运行说明.txt  CMakeLists.txt  CMakePresets.json  analysis.c  file.c  main.cpp  student.c  student.h
codex/GradeSystem/GradeSystem/data/: data.txt
codex/GradeSystem/GradeSystem/docs/: Visual Studio 2026运行说明.txt  学生成绩管理系统课程设计报告.docx  学生成绩管理系统课程设计报告（完整版）.docx
codex/GradeSystem/GradeSystem/include/: app_logic.h  creator_info.h  student.h
codex/GradeSystem/GradeSystem/src/: analysis.c  app_logic.c  creator_info.c  file.c  main.cpp  student.c
miniprogram/: app.js  app.json  app.wxss  sitemap.json
miniprogram/pages/calendar/: calendar.js  calendar.wxml  calendar.wxss
miniprogram/pages/detail/: detail.js  detail.json  detail.wxml  detail.wxss
miniprogram/pages/edit/: edit.js  edit.json  edit.wxml  edit.wxss
miniprogram/pages/index/: index.js  index.wxml  index.wxss
miniprogram/pages/settings/: settings.js  settings.wxml  settings.wxss
miniprogram/pages/statistics/: statistics.js  statistics.wxml  statistics.wxss
miniprogram/utils/: calculator.js  date.js  storage.js
outputs/manual-20260609-ai-poster-v2/presentations/ai-wage-gap-poster-v2/output/: editable_poster_ai_wage_gap_v2.pptx  poster_revision_notes.md  poster_text_outline_v2.md
outputs/manual-20260609-ai-poster/presentations/ai-wage-gap-poster/output/: editable_poster_ai_wage_gap.pptx  poster_data_sources.md  poster_text_outline.md
outputs/manual-20260611-ai-poster-academic-enhancement/presentations/ai-wage-gap-academic/output/: editable_poster_ai_wage_gap_academic_v3.pptx
outputs/manual-20260611-ai-poster-portrait/presentations/ai-wage-gap-portrait/output/: editable_poster_ai_wage_gap_portrait.pptx
